# inference-server

./: .buildinfo  .clang-format  .clang-tidy  .cmake-format.json  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  CPPLINT.cfg  Dockerfile  LICENSE  README.rst  ROADMAP.rst  aks.html  amdinfer  architecture.html  benchmarking.html  changelog.html  cli.html  conanfile.py  contributing.html  cpp_api.conf  cpp_api.html  dependencies.html  docker-compose.autotest-dev.yml  docker-compose.autotest.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  genindex.html  hello_world_python.html  index.html  kserve.html  logging.conf  logging.html  (+20 more)
apps/mlcommons/: .gitignore  CMakeLists.txt  README.rst  analyze.py  benchmark.py  common.py  mlperf.conf.in
apps/mlcommons/src/: CMakeLists.txt  config_parser.cpp  config_parser.hpp  main.cpp  query_sample_library.cpp  query_sample_library.hpp  system_under_test.cpp  system_under_test.hpp
examples/cpp/: CMakeLists.txt  custom_processing.cpp  migraphx_client.cpp  pt_zendnn_client.cpp  tf_zendnn_client.cpp
examples/resnet50/: CMakeLists.txt  README.rst  migraphx.cpp  migraphx.py  ptzendnn.cpp  ptzendnn.py  quickstart-setup.sh  resnet.py  resnet50.hpp  rocal.cpp  rocal_pipeline.json  tfzendnn.cpp  tfzendnn.py  vitis.cpp  vitis.py
src/amdinfer/: CMakeLists.txt  build_options.hpp.in  main.cpp  version.hpp.in
src/amdinfer/batching/: CMakeLists.txt  batch.cpp  batch.hpp  batcher.cpp  batcher.hpp  hard.cpp  hard.hpp  soft.cpp  soft.hpp
src/amdinfer/buffers/: CMakeLists.txt  buffer.cpp  buffer.hpp  cpu.cpp  cpu.hpp  vart_tensor.cpp  vart_tensor.hpp  vart_tensor_buffer.cpp  vart_tensor_buffer.hpp  vector.cpp  vector.hpp  vector_buffer.cpp  vector_buffer.hpp
src/amdinfer/clients/: CMakeLists.txt  client.cpp  grpc.cpp  grpc_internal.cpp  grpc_internal.hpp  http.cpp  http_internal.cpp  http_internal.hpp  native.cpp  native_internal.cpp  native_internal.hpp  websocket.cpp
src/amdinfer/core/: CMakeLists.txt  api.cpp  api.hpp  data_types.cpp  data_types_internal.cpp  data_types_internal.hpp  endpoints.cpp  endpoints.hpp  inference.proto  inference_request.cpp  inference_response.cpp  inference_tensor.cpp  interface.cpp  interface.hpp  manager.cpp  manager.hpp  model_config.cpp  model_config.hpp  model_config.proto  model_metadata.cpp  model_repository.cpp  model_repository.hpp  parameters.cpp  predict_api.cpp  predict_api.proto  predict_api_internal.hpp  protocol_wrapper.cpp  protocol_wrapper.hpp  request_container.hpp  shared_state.cpp  shared_state.hpp  tensor.cpp  versioned_endpoint.hpp  worker_info.cpp  worker_info.hpp
src/amdinfer/models/: CMakeLists.txt  base64_decode.cpp  base64_encode.cpp  echo.cpp  echo_multi.cpp  invert_image.cpp
src/amdinfer/observation/: CMakeLists.txt  logging.cpp  logging.hpp  metrics.cpp  metrics.hpp  observer.hpp  prometheus.yml  status.hpp  tracing.cpp  tracing.hpp  tracing.yml
src/amdinfer/pre_post/: center_crop.hpp  get_top_k.hpp  image_preprocess.hpp  mnist_postprocess.hpp  resnet50_postprocess.hpp  softmax.hpp
src/amdinfer/protocol_wrappers/: CMakeLists.txt  protocol_wrapper.cpp  protocol_wrapper.hpp
src/amdinfer/servers/: CMakeLists.txt  grpc_server.cpp  grpc_server.hpp  http_server.cpp  http_server.hpp  server.cpp  server_internal.hpp  websocket_server.cpp  websocket_server.hpp
src/amdinfer/util/: CMakeLists.txt  base64.cpp  base64.hpp  compression.cpp  compression.hpp  containers.hpp  ctpl.cpp  ctpl.h  ctpl.hpp  exec.cpp  exec.hpp  filesystem.cpp  filesystem.hpp  memory.hpp  parse_env.cpp  parse_env.hpp  queue.hpp  read_nth_line.cpp  read_nth_line.hpp  string.hpp  thread.hpp  timer.cpp  timer.hpp  traits.hpp
src/amdinfer/workers/: CMakeLists.txt  aks.cpp  aks_detect.cpp  aks_detect.hpp  aks_detect_stream.cpp  c_plus_plus.cpp  echo.cpp  echo_multi.cpp  invert_image.cpp  invert_video.cpp  migraphx.cpp  pt_zendnn.cpp  pytorch.cpp  resnet50.cpp  resnet50_stream.cpp  responder.cpp  rocal.cpp  tf_zendnn.cpp  worker.hpp  xmodel.cpp
src/proteus/: CMakeLists.txt  build_options.hpp.in  main.cpp  version.hpp  version.hpp.in
src/proteus/batching/: CMakeLists.txt  batcher.cpp  batcher.hpp  fake_batcher.cpp  fake_batcher.hpp  hard.cpp  hard.hpp  soft.cpp  soft.hpp
src/proteus/bindings/: CMakeLists.txt
src/proteus/buffers/: CMakeLists.txt  buffer.cpp  buffer.hpp  vart_tensor_buffer.cpp  vart_tensor_buffer.hpp  vector_buffer.cpp  vector_buffer.hpp
src/proteus/client_api/: CMakeLists.txt  infer_async.cpp
src/proteus/client_operators/: CMakeLists.txt  infer_async.cpp
src/proteus/clients/: CMakeLists.txt  client.cpp  grpc.cpp  grpc_internal.cpp  grpc_internal.hpp  http.cpp  http_internal.cpp  http_internal.hpp  native.cpp  native_internal.cpp  native_internal.hpp  websocket.cpp
src/proteus/core/: CMakeLists.txt  api.cpp  api.hpp  data_types.cpp  fake_predict_api.cpp  fake_predict_api.hpp  interface.cpp  interface.hpp  manager.cpp  manager.hpp  model_config.proto  model_repository.cpp  model_repository.hpp  predict_api.cpp  predict_api.proto  (+4 more)
tests/api/: CMakeLists.txt  test_infer_async.cpp  test_model_infer.cpp  test_model_infer.py  test_model_infer_async.cpp  test_model_list.cpp  test_model_list.py  test_model_load.cpp  test_model_load.py  test_model_metadata.cpp  test_model_ready.cpp  test_model_ready.py  test_server_live.cpp  test_server_live.py  test_server_ready.cpp  test_server_ready.py  test_worker_load.cpp  test_worker_load.py
tests/cpp/: CMakeLists.txt  gtest.cpp
tests/workers/: CMakeLists.txt  facedetect.cpp  facedetect.hpp  test_aks.py  test_cplusplus.cpp  test_cplusplus.py  test_echo.cpp  test_echo.py  test_echo_multi.py  test_facedetect.cpp  test_facedetect.py  test_facedetect_stream.py  test_fake.py  test_invert_image.py  test_invert_video.py  test_migraphx.cpp  test_migraphx.py  test_ptzendnn.py  test_pytorch.py  test_resnet50_dpucadf8h.py  test_resnet50_stream.py  test_tfzendnn.py  test_xmodel.cpp  test_xmodel.py  test_yolov3.py  xmodel.cpp  xmodel.hpp
(+8883 files in other folders)
