# Copyright 2021 Xilinx, Inc.
# Copyright 2022 Advanced Micro Devices, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "ninja; platform_system!='Windows'",
    "scikit-build>=0.15.0",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["*-manylinux_x86_64"]
# there's some issues with Python 11 and numpy
skip = ["pp*", "cp311-manylinux_x86_64"]

[tool.cibuildwheel.linux]
repair-wheel-command = [
    "export LD_LIBRARY_PATH=$(cat /project/tmp.cmake):$LD_LIBRARY_PATH",
    "auditwheel repair -w {dest_dir} {wheel}"
]

[tool.isort]
known_first_party = ["proteus"]
known_local_folder=["helper"]
